atualizando arquivos da pasta atividade saque

--- a/atividade saque/index.html
+++ b/atividade saque/index.html
@@ -22,6 +22,9 @@
     </div>
     <button id="sacar" onclick="Sacar()">Sacar</button>
     <button id="depositar" onclick="Depositar()">Depositar</button>
+    <div id="extrato">
+        
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
