--- a/atividade saque/index.html
+++ b/atividade saque/index.html
@@ -21,14 +21,16 @@
             <label for="id_saque"><strong>Valor do saque:</strong></label>
             <input type="text" id="id_saque">
         </div>
-        <button id="depositar" onclick="Depositar()">Depositar</button>
-        <button id="sacar" onclick="Sacar()">Sacar</button>
-    </div>
-    <div id="extrato">
-       <h3>Extrato:</h3> 
-    </div>
+        <div class="container-btn">
+            <button id="depositar" onclick="Depositar()"><strong>Depositar</strong></button>
+            <button id="sacar" onclick="Sacar()"><strong>Sacar</strong></button>
+        </div>
+        <div id="extrato">
+            <h3>Extrato:</h3> 
+        </div>
+    </div>    
     <footer>
-        <p class="copy">&copy; Não Sou O Tejas Mere</p>
+        <p class="copy"><strong>&copy; Não Sou O Tejas Mere</strong></p>
     </footer>
     <script src="script.js"></script>
 </body>
