--- a/atividade switch/index.html
+++ b/atividade switch/index.html
@@ -8,7 +8,7 @@
     <title>Switch</title>
 </head>
 <body>
-    <h1>Loja de Periféricos Gamer</h1>
+    <h1>Tejas Periféricos Gamer</h1>
     <div class="container">
         <label for="headsets">Headsets</label>
         <select name="" id="headsets">
