atualizando os códigos

--- a/atividade login/index.html
+++ b/atividade login/index.html
@@ -14,8 +14,9 @@
     Senha: <br> 
     <input type="password" id="senha"> <br>
     <button onclick="login()">Login</button>
+    <button onclick="cadastro()">Cadastrar-se</button>
     <div id="foto">
-        <img src="" alt="Foto de Perfil" id="foto-perfil" height="100px" width="100px">
+        <img src="" alt="Foto de Perfil" id="foto-perfil" height="300px" width="300px">
     </div>
 </body>
 <script src="script.js"></script>
