--- a/atividade_login/index.html
+++ b/atividade_login/index.html
@@ -6,18 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade Login</title>
 </head>
-<body>
-    Nome de Usuário: <br>
-    <input type="text" id="nome_usuario"> <br>
-    Email: <br>
-    <input type="email" id="email"> <br>
-    Senha: <br> 
-    <input type="password" id="senha"> <br>
-    <button onclick="login()">Login</button>
-    <button onclick="cadastro()">Cadastrar-se</button>
-    <div id="foto">
-        <img src="" alt="Foto de Perfil" id="foto-perfil" height="300px" width="300px">
-    </div>
+<body id="corpo">
+    <button onclick="pg_login()">Ir para Login</button>
+    <button onclick="pg_cadastro()">Ir para Cadastro</button>
 </body>
 <script src="script.js"></script>
 </html>
