atualização atividade Dark UX

--- a/atividade_DarkUx/index.html
+++ b/atividade_DarkUx/index.html
@@ -23,23 +23,32 @@
             <div class="container-flexivel"> 
                 <div class="container"> 
                     <div class="foto">
-                        <img src="img/616pKB+vNKL._AC_SX679_.jpg" alt="foto_produto">
+                        <span class="foto-produto">
+                            <img src="img/produto.jpg" alt="foto_produto">
+                        </span>
                     </div>
                     <div class="descricao">
-                        <p class="oferta">Oferta do dia 25/05:<br>50%OFF</p>
-                        <p class="preco1">De:R$4.439,99</p>
-                        <p class="preco2">Para:R$2.219,99</p>
-                        <p class="descricao-produto">
-                            Marca: Lenovo<br>
-                            SérieGaming 3<br>
-                            Tamanho da tela: 15,6 Polegadas<br>
-                            Cor: preto<br>
-                            Modelo da CPU: AMD R Series<br>
-                            Tamanho instalado da memória RAM: 8 GB<br>
-                            <br>
-                            Ver mais
-                        </p>
-                        <button class="btn-comprar" id="btn">Comprar</button>
+                        <div class="div-descricao-produto">
+                            <p class="oferta">Ofertas do dia 25/05:<br>50%OFF</p>
+                            <p class="preco1">De:R$4.439,99</p>
+                            <p class="preco2">Para:R$2.219,99</p>
+                            <p class="descricao-produto">
+                                Marca: Lenovo<br>
+                                SérieGaming 3<br>
+                                Tamanho da tela: 15,6 Polegadas<br>
+                                Cor: preto<br>
+                                Modelo da CPU: AMD R Series<br>
+                                Tamanho instalado da memória RAM: 8 GB<br>
+                                <br>
+                                <img src="img/expandir.svg" alt="expandir-icon" width="30px" height="30px">Ver mais
+                            </p>
+                            <div class="carrinho-container"> 
+                                <button class="btn-comprar" id="btn" onclick="">
+                                    Comprar <img src="img/carrinho.svg" 
+                                    alt="carrinho-icon" width="30px" height="30px">
+                                </button>
+                            </div>  
+                        </div> 
                     </div>
                 </div> 
             </div>   
