--- a/atividade_DarkUx/index.html
+++ b/atividade_DarkUx/index.html
@@ -4,20 +4,22 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="style.css">
         <title>Dark UX design</title>
     </head>
     <body>
         <header>
             <nav>
-                <span>Oferta do dia</span>
-                <span>Eletrônicos</span>
-                <span>Novidades</span>
-                <span>Mais Vendidos</span>
-            </nav>
-            <div class="search_bar">
+                <img class="hamburguer" src="img/menu.svg" alt="menu">
+                <span class="aba">Oferta do dia</span>
+                <span class="aba">Eletrônicos</span>
+                <span class="aba">Novidades</span>
+                <span class="aba">Mais Vendidos</span>
+                <div class="search_bar">
 
-            </div>
+                </div>
+            </nav>
         </header>
         <section>
             <div class="container-flexivel"> 
@@ -30,8 +32,8 @@
                     <div class="descricao">
                         <div class="div-descricao-produto">
                             <p class="oferta">Ofertas do dia 25/05:<br>50%OFF</p>
-                            <p class="preco1">De:R$4.439,99</p>
-                            <p class="preco2">Para:R$2.219,99</p>
+                            <p class="preco1">De: R$4.439,99</p>
+                            <p class="preco2">Para: R$2.219,99</p>
                             <p class="descricao-produto">
                                 Marca: Lenovo<br>
                                 SérieGaming 3<br>
@@ -44,7 +46,7 @@
                             </p>
                             <div class="carrinho-container"> 
                                 <button class="btn-comprar" id="btn" onclick="">
-                                    Comprar <img src="img/carrinho.svg" 
+                                    Comprar <img src="img/carrinho.svg"
                                     alt="carrinho-icon" width="30px" height="30px">
                                 </button>
                             </div>  
