--- a/atividade_DarkUx/index.html
+++ b/atividade_DarkUx/index.html
@@ -11,15 +11,16 @@
     <body>
         <header>
             <nav>
-                <img class="hamburguer" src="img/menu.svg" alt="menu">
+                <div class="div-hamburguer">
+                    <img class="hamburguer" src="img/menu.svg" alt="menu">
+                </div>
                 <div class="abas">
-                    <span class="aba">Oferta do dia</span>
+                    <span class="aba">Ofertas do dia</span>
                     <span class="aba">Eletrônicos</span>
                     <span class="aba">Novidades</span>
                     <span class="aba">Mais Vendidos</span>
                 </div>   
                 <div class="search_bar">
-                    <img src="img/lupa.svg" alt="lupa">
                     <input type="text" placeholder="Pesquisar..." onclick="" id="src_input">
                 </div>
             </nav>
@@ -34,12 +35,12 @@
                     </div>
                     <div class="descricao">
                         <div class="div-descricao-produto">
-                            <p class="oferta">Ofertas do dia 25/05:<br>50%OFF</p>
+                            <p class="oferta">Oferta do dia 25/05:<br>50%OFF</p>
                             <p class="preco1">De: R$4.439,99</p>
                             <p class="preco2">Para: R$2.219,99</p>
                             <p class="descricao-produto">
                                 Marca: Lenovo<br>
-                                SérieGaming 3<br>
+                                Modelo: Ideapad Gaming 3<br>
                                 Tamanho da tela: 15,6 Polegadas<br>
                                 Cor: preto<br>
                                 Modelo da CPU: AMD R Series<br>
