--- a/atividade_DarkUx/carrinho.html
+++ b/atividade_DarkUx/carrinho.html
@@ -41,7 +41,7 @@
                     <br>
                     <p class="preco2">R$2.219,99</p>
                     <div class="carrinho-container-2"> 
-                        <button class="btn-comprar-2" id="btn">
+                        <button class="btn-comprar-2" id="btn" onclick="voltarTela()">
                             Finalizar Compra <img src="img/carrinho.svg"
                             alt="carrinho-icon" width="40px" height="40px">
                         </button>
